k8s/opa/templates/require-non-root.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: requirenonroot
  annotations:
    description: "Deny containers that do not set runAsNonRoot=true. Checks spec.containers and spec.initContainers."
spec:
  crd:
    spec:
      names:
        kind: RequireNonRoot
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package requirenonroot

      violation[{"msg": msg}] {
        container := input_containers[_]
        not container.securityContext.runAsNonRoot == true
        msg := sprintf("Container '%v' must set securityContext.runAsNonRoot=true", [container.name])
      }

      input_containers[c] {
        c := input.review.object.spec.containers[_]
      }

      input_containers[c] {
        c := input.review.object.spec.initContainers[_]
      }
